# ArenaPulse

./: .env.example  .gitignore  ArenaPulse_Plan.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .coverage  .env.example  Dockerfile  README.md  conftest.py  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  constants.py  database.py  demo_data.py  dependencies.py  main.py  models.py
backend/app/agents/: base.py  concierge.py  crowd_sentinel.py  navigator.py  ops_commander.py  sustainability.py
backend/app/api/: auth.py  concierge.py  demo.py  navigation.py  ops.py  sustainability.py  websocket.py
backend/app/graph/: neo4j_client.py  seed.py
backend/app/simulator/: crowd_simulator.py
backend/app/utils/: llm_router.py  security.py
backend/tests/: conftest.py  test_agent_logic.py  test_agents.py  test_api.py  test_auth.py  test_auth_integration.py  test_concierge.py  test_coverage_maximizer.py  test_demo_data.py  test_llm_router.py  test_models.py  test_navigator.py  test_ops_integration.py  test_rate_limiter.py  test_security.py  test_simulator.py  test_websocket.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  setupTests.ts  styles.css  types.ts
frontend/src/components/: AccessibilityToolbar.tsx  ChatWidget.test.tsx  ChatWidget.tsx  DashboardCharts.tsx  ErrorBoundary.tsx  LiveStadiumMap.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useSpeech.ts  useWebSocket.test.ts  useWebSocket.ts
frontend/src/pages/: FanApp.tsx  (+5 more)
(+6 files in other folders)
