[tool.poetry]
name = "arenapulse-backend"
version = "0.1.0"
description = "AI Operations & Fan Copilot for FIFA World Cup 2026"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.8.0"
pydantic-settings = "^2.3.0"
neo4j = "^5.21.0"
asyncpg = "^0.29.0"
redis = "^5.0.0"
httpx = "^0.27.0"
pyjwt = "^2.8.0"
python-multipart = "^0.0.9"
bcrypt = "^4.1.0"
slowapi = "^0.1.9"
python-dotenv = "^1.0.0"
structlog = "^24.2.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
respx = "^0.21.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.0"
isort = "^5.13.0"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing"
